--- a/README.qmd
+++ b/README.qmd
@@ -35,7 +35,8 @@ from gcor import gcor
 x = pd.Series([0, 0, 0, 0, 0, 1, 1, 1, 1, 1])
 y = pd.Series([1, 2, 3, 4, 5, 3, 4, 5, 6, 7])
 
-gcor(x, y)
+g = gcor(x, y)
+print(g)
 ```
 
 ### Matrix example (mixed numeric and categorical data)
@@ -47,5 +48,6 @@ df = pd.DataFrame({
     "z": ["a", "a", "b", "b", "c", "c", "d", "d", "e", "e"],
 })
 
-gcor(df)
+gmat = gcor(df)
+print(gmat)
 ```
