--- a/README_USER.qmd
+++ b/README_USER.qmd
@@ -1,5 +1,5 @@
 ---
-title: gcor-py
+title: A Python library for generalized correlation
 format: gfm
 jupyter: python3
 execute:
@@ -8,8 +8,8 @@ execute:
   error: false
 ---
 
-# `gcor` package for Python
-A Python implementation of generalized correlation measure. An R implementation is available at https://github.com/r-suzuki/gcor.
+A Python implementation of generalized correlation measure. For development status and source code, see
+<https://github.com/r-suzuki/gcor-py>.
 
 **Note that this project is in an early stage of development, so changes
 may occur frequently.**
