--- a/README_USER.qmd
+++ b/README_USER.qmd
@@ -22,7 +22,7 @@ pip install git+https://github.com/r-suzuki/gcor-py.git
 
 ## Examples
 
-**Generalized correlation measure** takes values in $[0, 1]$ and can capture
+**Generalized correlation measure** takes values in [0, 1] and can capture
 both linear and nonlinear associations. It naturally handles mixed data types,
 including numerical and categorical variables.
 
