--- a/README_USER.qmd
+++ b/README_USER.qmd
@@ -22,18 +22,17 @@ pip install git+https://github.com/r-suzuki/gcor-py.git
 
 ## Examples
 
-**Generalized correlation measure** takes values in [0, 1] and can capture
+**Generalized correlation measure** takes values in $[0, 1]$ and can capture
 both linear and nonlinear associations. It naturally handles mixed data types,
 including numerical and categorical variables.
 
 ### Scalar example
 
 ```{python}
-import pandas as pd
 from gcor import gcor
 
-x = pd.Series([0, 0, 0, 0, 0, 1, 1, 1, 1, 1])
-y = pd.Series([1, 2, 3, 4, 5, 3, 4, 5, 6, 7])
+x = [0, 0, 0, 0, 0, 1, 1, 1, 1, 1]
+y = [1, 2, 3, 4, 5, 3, 4, 5, 6, 7]
 
 g = gcor(x, y)
 print(g)
@@ -42,6 +41,8 @@ print(g)
 ### Matrix example (mixed numeric and categorical data)
 
 ```{python}
+import pandas as pd
+
 df = pd.DataFrame({
     "x": x,
     "y": y,
